# kegg

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile
docs/source/: cli.rst  conf.py  constants.rst  enrichment.rst  index.rst  manager.rst  models.rst  web.rst
src/bio2bel_kegg/: __init__.py  __main__.py  cli.py  client.py  constants.py  hgnc_connection.py  manager.py  models.py  parsers.py  run.py  to_belns.py  web.py
src/bio2bel_kegg/parsers/: __init__.py  description.py  entities.py  pathways.py
tests/: __init__.py  constants.py  test_database.py  test_download.py  test_enrich.py  test_parsing.py  test_query.py
tests/resources/: hcop_test.txt  hgnc_test.json  hsa.txt  path:hsa00010.txt  pathway_gene.txt  test_pathway.txt  test_protein.txt
tmp_resources/: hsa  hsa.txt
